# AfiliadoBot.top

./: .env  .env.example  .gitignore  Doc_API_ML.md  Doc_API_Shopee.md  Doc_Telebot.md  Procfile  README.md  exchange_ml_code.py  index.html  index.tsx  meli_token.json  metadata.json  ml_callback.html  ml_pkce.json  package-lock.json  package.json  pyproject.toml  quick_ml_token.py  render.yaml  requirements.txt  test_connection.py  vercel.json  vite.config.ts
.github/workflows/: 66_campaign.yml  ci.yml  shopee_daily.yml  telegram_daily.yml
affiliate-bot-tools/: SKILL.md
affiliate-bot-tools/scripts/: tools.py
afiliadohub/: .env.example  .gitignore  .vercelignore  README.md  requirements.txt  vercel.json
afiliadohub/api/: index.py  requirements.txt
api/: index.py  ml-search.ts
docs/: ANALYTICS_QUICKSTART.md  README.md  SHOPEE_SETUP_GUIDE.md  TELEGRAM_BOT_GUIDE.md
e2e/: edge-cases.spec.ts  performance.spec.ts  roles.spec.ts  visual-regression.spec.ts
public/: ml-callback.html
scripts/: CHANGELOG.md  README.md  configure-telegram.ps1  diagnose-cors.ps1  explore_shopee_schema.py  import_feeds.py  import_mercadolivre.py  introspect_shopee.py  migrate_itil.ps1  oracle_arm_retry.py  send_daily_promo.py  send_test_message.py  shopee_daily_import.py  shopee_import_manual.py  start-tunnel.ps1  test_bot_enhanced.py  test_ml_affiliate.py  test_rate_limit_scroll.py  test_shopee_complete.py  test_shopee_shortlink.py  test_telegram_bot.py  test_telegram_config.py  test_telegram_simple.py  verify_token.py
scripts/auth/: README.md  (+7 more)
src/: App.tsx  index.css  main.tsx
(+216 files in other folders)
